--- a/components/colorPalette/colors.css
+++ b/components/colorPalette/colors.css
@@ -18,6 +18,7 @@
     --secondary-dark-blue-disabled: rgb(29, 45, 68, 0.39);
     --success-green: #268541;
     --white-color: white;
+    --lightish-gray: rgb(66, 62, 62);
 }
 
 .danger-color {
